--- a/Sivas/Content/customLand.css
+++ b/Sivas/Content/customLand.css
@@ -68,7 +68,7 @@
         top: -60px;
         left: 2px;
         float: right;
-        clear:both;        
+        clear: both;
     }
 
     .product_DescriptionLand .Price {
@@ -77,11 +77,11 @@
 
     .product_DescriptionLand .Offer {
         display: block;
-        position: relative;        
+        position: relative;
         top: -190px;
         left: -210px;
         float: right;
-        clear:both;
+        clear: both;
         z-index: 2;
     }
 
@@ -91,11 +91,11 @@
 
     .product_DescriptionLand .Specification {
         display: block;
-        margin-top:5px;
+        margin-top: 5px;
     }
 
         .product_DescriptionLand .Specification ul {
-            display:block;
+            display: block;
             margin-left: -40px;
             list-style: none;
         }
@@ -138,3 +138,8 @@
         top: 40%;
         color: #FFFFFF;
     }
+
+.pagination-container {
+    clear:both;
+    text-align:center;
+}
