--- a/Sivas/Views/Products/Index.cshtml
+++ b/Sivas/Views/Products/Index.cshtml
@@ -3,11 +3,78 @@
 @{
     ViewBag.Title = "Index";
 }
-
-@{
-    foreach (Sivas.Models.ProductCategory val in Enum.GetValues(typeof(Sivas.Models.ProductCategory)))
-    {
-        @Html.ActionLink(val.ToString(), "Category", new { category = val.ToString() });
-        <br />
-    }
+@section styles{
+    <link href="~/Content/customProduct.css" rel="stylesheet" />
 }
+<script type="text/javascript">
+    function GoToRoom(category) {
+        window.location = '@Html.Raw(@Url.Action("Category", "Products"))' + '?category=' + category;
+    }
+</script>
+<div class="container">
+    <div class="product">
+        <div class="Overlap"><span class="Text" @("onclick=GoToRoom('" + Sivas.Models.ProductCategory.TV + "')")>Browse</span></div>
+        <div class="product_Image"> <img src="image/Products/TV.png" class="product_Image" /> </div>
+        <div class="product_Title">TV </div>
+    </div>
+    <div class="product">
+        <div class="Overlap"><span class="Text" @("onclick=GoToRoom('" + Sivas.Models.ProductCategory.Refrigerator + "')")>Browse</span></div>
+        <div class="product_Image"> <img src="~/image/Products/Refrigerator.jpg" class="product_Image" /> </div>
+        <div class="product_Title">Refrigerator </div>
+    </div>
+    <div class="product">
+        <div class="Overlap"><span class="Text" @("onclick=GoToRoom('" + Sivas.Models.ProductCategory.AC + "')")>Browse</span></div>
+        <div class="product_Image"> <img src="~/image/Products/AC.jpg" class="product_Image" /> </div>
+        <div class="product_Title">AC </div>
+    </div>
+    <div class="product">
+        <div class="Overlap"><span class="Text" @("onclick=GoToRoom('" + Sivas.Models.ProductCategory.Cooler + "')")>Browse</span></div>
+        <div class="product_Image"> <img src="~/image/Products/Cooler.png" class="product_Image" /> </div>
+        <div class="product_Title">Cooler </div>
+    </div>
+    <div class="product">
+        <div class="Overlap"><span class="Text" @("onclick=GoToRoom('" + Sivas.Models.ProductCategory.Woodern + "')")>Browse</span></div>
+        <div class="product_Image"> <img src="~/image/Products/Woodern.png" class="product_Image" /> </div>
+        <div class="product_Title">Woodern </div>
+    </div>
+    <div class="product">
+        <div class="Overlap"><span class="Text" @("onclick=GoToRoom('" + Sivas.Models.ProductCategory.WoodenFurniture + "')")>Browse</span></div>
+        <div class="product_Image"> <img src="~/image/Products/WoodenFurniture.png" class="product_Image" /> </div>
+        <div class="product_Title">Wooden Furniture </div>
+    </div>
+    <div class="product">
+        <div class="Overlap"><span class="Text" @("onclick=GoToRoom('" + Sivas.Models.ProductCategory.WoodenCot + "')")>Browse</span></div>
+        <div class="product_Image"> <img src="~/image/Products/WoodenCot.png" class="product_Image" /> </div>
+        <div class="product_Title">Wooden Cot </div>
+    </div>
+    <div class="product">
+        <div class="Overlap"><span class="Text" @("onclick=GoToRoom('" + Sivas.Models.ProductCategory.WoodenKitchenSet + "')")>Browse</span></div>
+        <div class="product_Image"> <img src="~/image/Products/KitchenSet.png" class="product_Image" /> </div>
+        <div class="product_Title">Wooden Kitchen Set </div>
+    </div>
+    <div class="product">
+        <div class="Overlap"><span class="Text" @("onclick=GoToRoom('" + Sivas.Models.ProductCategory.WoodenPoojaTable + "')")>Browse</span></div>
+        <div class="product_Image"> <img src="~/image/Products/PoojaTable.png" class="product_Image" /> </div>
+        <div class="product_Title">Wooden Pooja Table </div>
+    </div>
+    <div class="product">
+        <div class="Overlap"><span class="Text" @("onclick=GoToRoom('" + Sivas.Models.ProductCategory.Fan + "')")>Browse</span></div>
+        <div class="product_Image"> <img src="~/image/Products/Fan.png" class="product_Image" /> </div>
+        <div class="product_Title">Fan </div>
+    </div>
+    <div class="product">
+        <div class="Overlap"><span class="Text" @("onclick=GoToRoom('" + Sivas.Models.ProductCategory.DiningTable + "')")>Browse</span></div>
+        <div class="product_Image"> <img src="~/image/Products/DiningTable.png" class="product_Image" /> </div>
+        <div class="product_Title">Dining Table </div>
+    </div>
+    <div class="product">
+        <div class="Overlap"><span class="Text" @("onclick=GoToRoom('" + Sivas.Models.ProductCategory.Sofa + "')")>Browse</span></div>
+        <div class="product_Image"> <img src="~/image/Products/Sofa.png" class="product_Image" /> </div>
+        <div class="product_Title">Sofa </div>
+    </div>
+    <div class="product">
+        <div class="Overlap"><span class="Text" @("onclick=GoToRoom('" + Sivas.Models.ProductCategory.SmallAppliances + "')")>Browse</span></div>
+        <div class="product_Image"> <img src="~/image/Products/SmallAppliances.png" class="product_Image" /> </div>
+        <div class="product_Title">Small Appliances </div>
+    </div>
+</div>
