--- a/Sivas/Views/Products/Index.cshtml
+++ b/Sivas/Views/Products/Index.cshtml
@@ -11,7 +11,7 @@
         window.location = '@Html.Raw(@Url.Action("Category", "Products"))' + '?category=' + category;
     }
 </script>
-<div class="container">
+<div class="ProductContainer">
     <div class="product">
         <div class="Overlap"><span class="Text" @("onclick=GoToRoom('" + Sivas.Models.ProductCategory.TV + "')")>Browse</span></div>
         <div class="product_Image"> <img src="image/Products/TV.png" class="product_Image" /> </div>
