--- a/Sivas/Content/customPort.css
+++ b/Sivas/Content/customPort.css
@@ -11,6 +11,9 @@
     float: left;
     height: 240px;
     width: 300px;
+    -webkit-box-shadow: 2px 2px 4px 2px #2D2D2D;
+    box-shadow: 2px 2px 4px 2px #2D2D2D;
+    border-radius: 10px;
 }
 
     .product:hover {
@@ -26,6 +29,11 @@
     height: 200px;
     width: 80px;
 }
+
+    .product_ImagePort img {
+        margin-top: 5px;
+        margin-left: 5px;
+    }
 
 .product_DescriptionPort {
     display: compact;
@@ -119,12 +127,14 @@
     -webkit-transition: opacity 1s linear 0.1s;
     -o-transition: opacity 1s linear 0.1s;
     transition: opacity 1s linear 0.1s;
+    border-radius: 10px;
 }
 
     .Overlap:hover {
         -webkit-opacity: 0.9;
         opacity: 0.9;
         z-index: 3;
+        border-radius: 10px;
     }
 
     .Overlap .Text {
