--- a/Sivas/Content/customProduct.css
+++ b/Sivas/Content/customProduct.css
@@ -1,6 +1,6 @@
 .ProductContainer {
     color: #808080;
-    margin-left:-30px;
+    margin-left: -30px;
 }
 
 .product {
@@ -9,6 +9,9 @@
     float: left;
     height: 240px;
     width: 300px;
+    -webkit-box-shadow: 2px 2px 4px 2px #2D2D2D;
+    box-shadow: 2px 2px 4px 2px #2D2D2D;
+    border-radius: 10px;
 }
 
 .product_Image {
@@ -22,11 +25,11 @@
 }
 
 .product_Title {
-    display: compact;
-    color:#c6c6c6;
+    display: compact;    
+    color: #2D2D2D;
     text-align: center;
-    font-size: large;
-    margin-top:5px;
+    font-size: x-large;
+    margin-top: 5px;
 }
 
 .Overlap {
@@ -38,16 +41,18 @@
     -webkit-transition: opacity 1s linear 0.1s;
     -o-transition: opacity 1s linear 0.1s;
     transition: opacity 1s linear 0.1s;
+    border-radius: 10px;
 }
 
     .Overlap:hover {
         -webkit-opacity: 0.9;
         opacity: 0.9;
+        border-radius: 10px;
         z-index: 3;
     }
 
     .Overlap .Text {
-        color:#ffffff;
+        color: #ffffff;
         display: block;
         text-align: center;
         font-size: xx-large;
