--- a/Sivas/Views/Products/Index.cshtml
+++ b/Sivas/Views/Products/Index.cshtml
@@ -19,12 +19,12 @@
     </div>
     <div class="product">
         <div class="Overlap"><span class="Text" @("onclick=GoToRoom('" + Sivas.Models.ProductCategory.Refrigerator + "')")>Browse</span></div>
-        <div class="product_Image"> <img src="~/image/Products/Refrigerator.jpg" class="product_Image" /> </div>
+        <div class="product_Image"> <img src="~/image/Products/Refrigerator.png" class="product_Image" /> </div>
         <div class="product_Title">Refrigerator </div>
     </div>
     <div class="product">
         <div class="Overlap"><span class="Text" @("onclick=GoToRoom('" + Sivas.Models.ProductCategory.AC + "')")>Browse</span></div>
-        <div class="product_Image"> <img src="~/image/Products/AC.jpg" class="product_Image" /> </div>
+        <div class="product_Image"> <img src="~/image/Products/AC.png" class="product_Image" /> </div>
         <div class="product_Title">AC </div>
     </div>
     <div class="product">
