--- a/Sivas/Content/customProduct.css
+++ b/Sivas/Content/customProduct.css
@@ -3,11 +3,36 @@
     margin-left: -30px;
 }
 
+.PriceHolder {
+    border-radius: 50%;
+    background-color: #fed0d0;
+    float: left;
+    position: relative;
+    top: -55px;
+    left: -15px;
+    clear: both;
+    width: 70px;
+    height: 70px;
+    -webkit-box-shadow: -2px 1px 6px #F53F42;
+    box-shadow: -2px 1px 6px #F53F42;
+    z-index: 3;
+}
+
+    .PriceHolder .Text {
+        position: relative;
+        text-align: right;
+        color: #2940f5;
+        font-size: medium;
+        top: 25px;
+        left: 5px;
+        text-shadow: 1px 1px 1px #b2fefe;
+    }
+
 .product {
     background-color: rgb(255, 250, 250);
-    margin-top:10px;
-    margin-bottom:20px;
-    margin-left:40px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    margin-left: 40px;
     float: left;
     height: 240px;
     width: 300px;
@@ -15,6 +40,10 @@
     box-shadow: 2px 2px 4px 2px #2D2D2D;
     border-radius: 10px;
 }
+
+    .product:hover {
+        cursor: pointer;
+    }
 
 .product_Image {
     display: block;
@@ -27,7 +56,7 @@
 }
 
 .product_Title {
-    display: compact;    
+    display: compact;
     color: #2D2D2D;
     text-align: center;
     font-size: x-large;
@@ -44,6 +73,7 @@
     -o-transition: opacity 1s linear 0.1s;
     transition: opacity 1s linear 0.1s;
     border-radius: 10px;
+    z-index: 3;
 }
 
     .Overlap:hover {
