--- a/Sivas/Content/customProduct.css
+++ b/Sivas/Content/customProduct.css
@@ -87,7 +87,7 @@
         color: #ffffff;
         display: block;
         text-align: center;
-        font-size: xx-large;
+        font-size: x-large;
         position: relative;
         top: 40%;
     }
