--- a/Sivas/Views/Products/Index.cshtml
+++ b/Sivas/Views/Products/Index.cshtml
@@ -18,7 +18,7 @@
     @foreach (var item in Model)
     {
         <div class="product" @("onclick=GoToRoom('" + item.Category + "')")>
-            <div class="Overlap"><span class="Text">Browse</span></div>
+            <div class="Overlap"><span class="Text">See More</span></div>
             <div class="product_Image">
                 <img src="@String.Format("data:image/gif;base64,{0}", Convert.ToBase64String(item.Image))" class="product_Image" />
             </div>
